# roy-ai-editor

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  NORTH_STAR.md  README.en.md  README.md  SETUP.en.md  SETUP.md  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING.md  pyproject.toml
docs/adr/: 0001-base-roy-ai-editor-on-video-autopilot-kit.md  0002-maintain-upstream-git-lineage.md  0003-separate-source-code-from-production-assets.md  0004-use-one-project-manifest-as-current-state.md  0005-standardize-media-project-layout.md  0006-keep-public-repo-free-of-private-and-restricted-data.md  0007-reconcile-histories-without-rewriting-main.md  0008-run-production-on-the-dedicated-mac-mini.md  0009-keep-external-editing-tools-behind-adapters.md  0010-make-concert-live-the-first-production-golden-path.md  0011-use-exception-based-review-after-lyrics-approval.md  0012-upload-private-before-visibility-promotion.md  0013-start-retention-from-a-project-state-event.md  0014-use-tiered-retention-for-production-assets.md  0015-permanently-delete-expired-media-from-an-exact-plan.md  0016-fail-storage-preflight-before-shortening-retention.md  (+31 more)
docs/agents/: domain.md  (+2 more)
examples/: 02_caption_broll_match.py  03_premium_fx.py  karaoke-timing.example.json
knowledge/: README.md  agent-token-efficiency.md  autopilot-workflow.md  capcut-agent-brief-template.md  capcut-automation-sop.md  capcut-json-direct-edit.md  capcut-pro-paywall-map.md  capcut-text-templates.md  launch-hype-sop.md  meta-lessons.md  premium-motion-fx.md  programmatic-video-build.md  script-style-framework.md  teaching-niche-playbook.md  video-craft-playbook.md  viral-short-playbook.md  youtube-algorithm-2026.md
profiles/: roy-public.example.json
scripts/: calibrate_ruby_layout.py  check_repo_integrity.py  karaoke_visual_qa.py  sync_skill_to_windows.ps1
templates/: algorithm_context.template.md  brand_profile.template.md  community_mobilization.template.md  voice_profile.template.md
tests/: test_cli.py  test_concert_e2e.py  test_customization.py  test_deliverables.py  test_foundation.py  test_karaoke.py  test_lyrics.py  test_media.py  test_migration.py  test_migration_verification.py  test_production_lifecycle.py  test_project.py  test_publish.py  test_repo_integrity.py  test_timing.py  test_vendor.py
workflows/: concert-live.json
(+58 files in other folders)
