[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roy-ai-editor"
version = "0.1.0"
description = "Local-first AI video editor for Roy's repeatable media workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
roy-editor = "roy_ai_editor.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/roy_ai_editor"]
