[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roy-ai-editor"
version = "0.2.0"
description = "Local-first AI video editor with a bilingual karaoke workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  "pykakasi>=2.3.0",
  "yt-dlp>=2025.1.1",
]

[project.optional-dependencies]
alignment = [
  "stable-ts>=2.19.0",
  "numba>=0.61.2",
]

[project.scripts]
roy-editor = "roy_ai_editor.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/roy_ai_editor",
  "src/capcut_helpers",
  "src/longform_maker",
  "src/silent_vlog_maker",
  "src/platform_compat.py",
]

[tool.hatch.build.targets.wheel.force-include]
"profiles" = "roy_ai_editor/resources/profiles"
"workflows" = "roy_ai_editor/resources/workflows"
"docs/quality/concert-v1-quality-registry.md" = "roy_ai_editor/resources/quality/concert-v1-quality-registry.md"
